[package]
name = "network-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { path = "../miden-client/crates/rust-client", package = "miden-client", features = ["testing", "tonic"] }

# # Client dependency overrides
# miden-node-block-producer = { branch = "next", git = "https://github.com/0xMiden/miden-node" }
# miden-node-ntx-builder = { branch = "next", git = "https://github.com/0xMiden/miden-node" }
# miden-node-proto-build = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-node" }
# miden-node-rpc = { branch = "next", git = "https://github.com/0xMiden/miden-node" }
# miden-node-store = { branch = "next", git = "https://github.com/0xMiden/miden-node" }
# miden-node-utils = { branch = "next", git = "https://github.com/0xMiden/miden-node" }
# miden-note-transport-proto-build = { default-features = false, git = "https://github.com/0xMiden/miden-note-transport" }
# miden-remote-prover = { branch = "next", features = ["concurrent"], git = "https://github.com/0xMiden/miden-node" }
# miden-remote-prover-client = { branch = "next", default-features = false, features = [
#   "tx-prover",
# ], git = "https://github.com/0xMiden/miden-node" }

# # 0.12 dependencies
# miden-lib     = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-base" }
# miden-objects = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-base" }
# miden-testing = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-base" }
# miden-tx      = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-base" }

# # Others
# miden-crypto = { version = "0.18", features = ["executable"] }
# miden-assembly = "0.19"
# rand = { version = "0.9" }
# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1.0", features = ["raw_value"] }
# tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
# rand_chacha = "0.9.0"
