[package]
name = "network-faucet"
version = "0.12.2"
edition = "2021"

[dependencies]
# miden-client = { git ="https://github.com/0xMiden/miden-client", branch = "main", package ="miden-client", features = ["testing", "tonic"] }
miden-client = { git ="https://github.com/0xMiden/miden-client", branch = "main", package ="miden-client", features = ["testing", "tonic"] }
miden-objects = { version = "0.12.2" }
miden-lib = { version = "0.12.2" }
miden-client-sqlite-store = { git ="https://github.com/0xMiden/miden-client", branch = "main", package ="miden-client-sqlite-store" }

# Others
miden-crypto = { version = "0.18", features = ["executable"] }
miden-assembly = "0.19"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
