[package]
name = "network-faucet"
version = "0.12.3"
edition = "2021"

[[bin]]
name = "network-faucet"
path = "src/main.rs"

[dependencies]
miden-client = { version = "0.12", package ="miden-client", features = ["testing", "tonic"] }
miden-objects = { version = "0.12" }
miden-lib = { version = "0.12" }
miden-client-sqlite-store = { version = "0.12", package ="miden-client-sqlite-store" }

# Others
miden-crypto = { version = "0.18", features = ["executable"] }
miden-assembly = "0.19"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
